// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autostopping rule analytics drawer render analytics drawer 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-xlarge"
    >
      <div
        class="StyledProps--font StyledProps--main analyticsHeader"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
          >
            <h1
              class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--font-weight-semi-bold"
              level="1"
            >
              string
            </h1>
            <label
              class="bp3-control bp3-switch ruleToggle"
            >
              <input
                checked=""
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
            </label>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main headerLayout"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--flex"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="Edit"
                data-testid="editRuleIcon"
                style="cursor: pointer;"
              >
                <svg
                  height="20"
                  viewBox="0 0 16 16"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    opacity="0.3"
                  />
                </svg>
              </span>
              <span
                class="bp3-icon StyledProps--main"
                data-icon="main-trash"
                data-testid="deleteRuleIcon"
                style="cursor: pointer;"
              >
                <svg
                  height="20"
                  viewBox="0 0 16 20"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    opacity="0.3"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          Created Invalid date
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main analyticsHeader"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--font-weight-bold"
          level="2"
        >
          Rule Details
        </h2>
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
        >
          <div
            class="StyledProps--font StyledProps--main serviceDetailsItemContainer"
          >
            <p
              class="StyledProps--font StyledProps--main detailItemHeader"
            >
              ce.co.ruleDetailsHeader.idleTime
            </p>
            <p
              class="StyledProps--font StyledProps--main detailItemValue"
            >
              10 min
            </p>
          </div>
          <div
            class="StyledProps--font StyledProps--main serviceDetailsItemContainer"
          >
            <p
              class="StyledProps--font StyledProps--main detailItemHeader"
            >
              Resources managed
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main detailItemValue"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-blue500"
                data-icon="spinner"
              >
                <svg
                  fill="none"
                  height="12"
                  viewBox="0 0 36 36"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
                    stroke="currentColor"
                    stroke-dasharray="75,100"
                    stroke-linecap="round"
                    stroke-width="2.8"
                    style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main serviceDetailsItemContainer"
          >
            <p
              class="StyledProps--font StyledProps--main detailItemHeader"
            >
              ce.co.ruleDetailsHeader.hostName
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailItemValue"
            >
              <a
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--link"
                href="http://string"
                rel="noreferrer noopener"
                role="button"
                style="max-width: 350px; text-align: left;"
                tabindex="0"
                target="_blank"
              >
                <span
                  class="bp3-button-text"
                >
                  string
                </span>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-blue500"
                data-icon="copy"
                style="cursor: pointer;"
              >
                <svg
                  height="20"
                  viewBox="0 0 14 16"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="#22272D"
                    stroke="#22272D"
                    stroke-width="0.25"
                  >
                    <path
                      d="M12.89.55H6.388a3.28 3.28 0 00-3.043 2.067C1.672 2.76.34 4.17.34 5.87v9.271c0 .17.138.308.307.308H7.15c1.35 0 2.543-.825 3.042-2.066 1.673-.144 3.006-1.554 3.006-3.255V.86a.307.307 0 00-.308-.31zM7.15 14.835H.955V5.87c0-1.299.955-2.4 2.199-2.624-.002.01-.001.021-.003.032-.031.182-.05.367-.05.552v9.27c0 .17.138.308.308.308h6.105a2.67 2.67 0 01-2.364 1.425zm5.432-4.705a2.68 2.68 0 01-2.607 2.664H3.716V3.831a2.672 2.672 0 012.671-2.665h6.195v8.963z"
                    />
                    <path
                      d="M6.11 6.672a.308.308 0 000 .615h1.732V9.02a.308.308 0 00.616 0V7.287h1.733a.308.308 0 000-.615H8.458V4.939a.308.308 0 00-.616 0v1.733H6.11z"
                    />
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main serviceDetailsItemContainer"
          >
            <p
              class="StyledProps--font StyledProps--main detailItemHeader"
            >
              connectorsLabel
            </p>
            <div
              class="Layout--horizontal StyledProps--main detailItemValue"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-aws"
                >
                  <svg
                    height="18"
                    viewBox="0 0 14 10"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                      fill="#252f3e"
                    />
                    <g
                      fill="#f90"
                    >
                      <path
                        d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                      />
                      <path
                        d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                      />
                    </g>
                  </svg>
                </span>
                <a
                  href="/account/undefined/settings/resources/connectors/string"
                  target="_blank"
                >
                  Test Connector
                </a>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  (ce.co.accessPoint.cloudAccount)
                </p>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main serviceDetailsItemContainer"
          >
            <p
              class="StyledProps--font StyledProps--main detailItemHeader"
            >
              ce.co.ruleDetailsHeader.customDomain
            </p>
            <div
              class="detailItemValue"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <a
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--link"
                  href="http://custom.doamin.in"
                  rel="noreferrer noopener"
                  role="button"
                  tabindex="0"
                  target="_blank"
                >
                  <span
                    class="bp3-button-text"
                  >
                    custom.doamin.in
                  </span>
                </a>
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-blue500"
                  data-icon="copy"
                  style="cursor: pointer;"
                >
                  <svg
                    height="20"
                    viewBox="0 0 14 16"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="#22272D"
                      stroke="#22272D"
                      stroke-width="0.25"
                    >
                      <path
                        d="M12.89.55H6.388a3.28 3.28 0 00-3.043 2.067C1.672 2.76.34 4.17.34 5.87v9.271c0 .17.138.308.307.308H7.15c1.35 0 2.543-.825 3.042-2.066 1.673-.144 3.006-1.554 3.006-3.255V.86a.307.307 0 00-.308-.31zM7.15 14.835H.955V5.87c0-1.299.955-2.4 2.199-2.624-.002.01-.001.021-.003.032-.031.182-.05.367-.05.552v9.27c0 .17.138.308.308.308h6.105a2.67 2.67 0 01-2.364 1.425zm5.432-4.705a2.68 2.68 0 01-2.607 2.664H3.716V3.831a2.672 2.672 0 012.671-2.665h6.195v8.963z"
                      />
                      <path
                        d="M6.11 6.672a.308.308 0 000 .615h1.732V9.02a.308.308 0 00.616 0V7.287h1.733a.308.308 0 000-.615H8.458V4.939a.308.308 0 00-.616 0v1.733H6.11z"
                      />
                    </g>
                  </svg>
                </span>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main serviceDetailsItemContainer"
          >
            <p
              class="StyledProps--font StyledProps--main detailItemHeader"
            >
              ce.co.ruleDetailsHeader.computeType
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailItemValue"
            >
              <img
                alt=""
                aria-hidden="true"
                height="18"
                src="test-file-stub"
                width="18"
              />
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey500"
                style="--text-line-clamp: 3;"
              >
                string
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main analyticsHeader"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
        >
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--font-weight-bold"
            level="2"
          >
            ce.co.autoStoppingRule.configuration.step4.advancedConfiguration
          </h2>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main analyticsHeader"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
        >
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main analyticsSubHeader StyledProps--font-weight-bold"
            level="2"
          >
            ce.co.autoStoppingRule.setupAccess.helpText.ssh.setup.download
          </h2>
          <div>
            <p
              class="StyledProps--font StyledProps--main text"
            >
              ce.co.sshSetup
              <span>
                <a
                  href=" https://docs.harness.io/article/7025n9ml7z-create-autostopping-rules-aws#setup_access_using_ssh_rdp"
                  target="_blank"
                >
                  Read More
                </a>
              </span>
            </p>
            <div
              class="Layout--horizontal StyledProps--main downloadCliContainer"
            >
              <div
                class="selectContainer"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="sshOs"
                        placeholder="- Select -"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main downloadBtn Button--with-current-color Button--iconOnly"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Download CLI
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-medium"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          >
            <div
              style="align-self: center;"
            >
              <div />
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-large"
            >
              <h2
                class="StyledProps--font StyledProps--font-h2 StyledProps--main"
                level="2"
              >
                $
                0
              </h2>
              <p
                class="StyledProps--font StyledProps--main"
              >
                ce.co.rulesTableHeaders.savings
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        style="align-self: center;"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          ce.co.ruleDrawer.lastWeekDataLabel
        </p>
      </div>
      <h3
        class="StyledProps--font StyledProps--font-h3 StyledProps--main"
        level="3"
      >
        CE.CO.RULEDRAWER.SPENDVSSAVINGS
      </h3>
      <p
        class="StyledProps--font StyledProps--main"
        style="align-self: center;"
      >
        ce.co.noData
      </p>
      <h3
        class="StyledProps--font StyledProps--font-h3 StyledProps--main"
        level="3"
      >
        CE.CO.RULEDRAWER.LOGS AND CE.CO.RULEDRAWER.USAGETIME
      </h3>
      <div
        class="bp3-tabs Tabs--main Tabs--horizontal"
      >
        <div
          class="bp3-tab-list"
          role="tablist"
        >
          <div
            class="bp3-tab-indicator-wrapper"
            style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
          >
            <div
              class="bp3-tab-indicator"
            />
          </div>
          <div
            aria-controls="bp3-tab-panel_logsAndUsage_name"
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="true"
            class="bp3-tab"
            data-tab-id="name"
            id="bp3-tab-title_logsAndUsage_name"
            role="tab"
            tabindex="0"
          >
            ce.co.ruleDrawer.usageTime
          </div>
          <div
            aria-controls="bp3-tab-panel_logsAndUsage_logs"
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="bp3-tab"
            data-tab-id="logs"
            id="bp3-tab-title_logsAndUsage_logs"
            role="tab"
            tabindex="0"
          >
            ce.co.ruleDrawer.logs
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="bp3-tab-title_logsAndUsage_name"
          class="bp3-tab-panel"
          id="bp3-tab-panel_logsAndUsage_name"
          role="tabpanel"
        >
          <div
            class="StyledProps--font StyledProps--main PageBody--pageBody pageContainer"
            data-name="page-body"
          >
            <p
              class="StyledProps--font StyledProps--main"
              style="align-self: center;"
            >
              ce.co.noData
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autostopping rule analytics drawer render k8s rule analytics drawer 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-xlarge"
    >
      <div
        class="StyledProps--font StyledProps--main analyticsHeader"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
          >
            <h1
              class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--font-weight-semi-bold"
              level="1"
            >
              string
            </h1>
            <label
              class="bp3-control bp3-switch ruleToggle"
            >
              <input
                checked=""
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
            </label>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main headerLayout"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--flex"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="Edit"
                data-testid="editRuleIcon"
                style="cursor: pointer;"
              >
                <svg
                  height="20"
                  viewBox="0 0 16 16"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    opacity="0.3"
                  />
                </svg>
              </span>
              <span
                class="bp3-icon StyledProps--main"
                data-icon="main-trash"
                data-testid="deleteRuleIcon"
                style="cursor: pointer;"
              >
                <svg
                  height="20"
                  viewBox="0 0 16 20"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    opacity="0.3"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          Created Invalid date
        </p>
      </div>
      <div
        class="StyledProps--font StyledProps--main analyticsHeader"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--font-weight-bold"
          level="2"
        >
          Rule Details
        </h2>
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
        >
          <div
            class="StyledProps--font StyledProps--main serviceDetailsItemContainer"
          >
            <p
              class="StyledProps--font StyledProps--main detailItemHeader"
            >
              ce.co.ruleDetailsHeader.idleTime
            </p>
            <p
              class="StyledProps--font StyledProps--main detailItemValue"
            >
              10 min
            </p>
          </div>
          <div
            class="StyledProps--font StyledProps--main serviceDetailsItemContainer"
          >
            <p
              class="StyledProps--font StyledProps--main detailItemHeader"
            >
              Resources managed
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main detailItemValue"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-blue500"
                data-icon="spinner"
              >
                <svg
                  fill="none"
                  height="12"
                  viewBox="0 0 36 36"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
                    stroke="currentColor"
                    stroke-dasharray="75,100"
                    stroke-linecap="round"
                    stroke-width="2.8"
                    style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main serviceDetailsItemContainer"
          >
            <p
              class="StyledProps--font StyledProps--main detailItemHeader"
            >
              ce.co.ruleDetailsHeader.hostName
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailItemValue"
            >
              <a
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--link"
                href="http://string"
                rel="noreferrer noopener"
                role="button"
                style="max-width: 350px; text-align: left;"
                tabindex="0"
                target="_blank"
              >
                <span
                  class="bp3-button-text"
                >
                  string
                </span>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-blue500"
                data-icon="copy"
                style="cursor: pointer;"
              >
                <svg
                  height="20"
                  viewBox="0 0 14 16"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="#22272D"
                    stroke="#22272D"
                    stroke-width="0.25"
                  >
                    <path
                      d="M12.89.55H6.388a3.28 3.28 0 00-3.043 2.067C1.672 2.76.34 4.17.34 5.87v9.271c0 .17.138.308.307.308H7.15c1.35 0 2.543-.825 3.042-2.066 1.673-.144 3.006-1.554 3.006-3.255V.86a.307.307 0 00-.308-.31zM7.15 14.835H.955V5.87c0-1.299.955-2.4 2.199-2.624-.002.01-.001.021-.003.032-.031.182-.05.367-.05.552v9.27c0 .17.138.308.308.308h6.105a2.67 2.67 0 01-2.364 1.425zm5.432-4.705a2.68 2.68 0 01-2.607 2.664H3.716V3.831a2.672 2.672 0 012.671-2.665h6.195v8.963z"
                    />
                    <path
                      d="M6.11 6.672a.308.308 0 000 .615h1.732V9.02a.308.308 0 00.616 0V7.287h1.733a.308.308 0 000-.615H8.458V4.939a.308.308 0 00-.616 0v1.733H6.11z"
                    />
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main serviceDetailsItemContainer"
          >
            <p
              class="StyledProps--font StyledProps--main detailItemHeader"
            >
              connectorsLabel
            </p>
            <div
              class="Layout--horizontal StyledProps--main detailItemValue"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-aws"
                >
                  <svg
                    height="18"
                    viewBox="0 0 14 10"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                      fill="#252f3e"
                    />
                    <g
                      fill="#f90"
                    >
                      <path
                        d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                      />
                      <path
                        d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                      />
                    </g>
                  </svg>
                </span>
                <a
                  href="/account/undefined/settings/resources/connectors/string"
                  target="_blank"
                >
                  Test Connector
                </a>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  (ce.co.accessPoint.cloudAccount)
                </p>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main serviceDetailsItemContainer"
          >
            <p
              class="StyledProps--font StyledProps--main detailItemHeader"
            >
              ce.co.ruleDetailsHeader.customDomain
            </p>
            <div
              class="detailItemValue"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <a
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--link"
                  href="http://custom.doamin.in"
                  rel="noreferrer noopener"
                  role="button"
                  tabindex="0"
                  target="_blank"
                >
                  <span
                    class="bp3-button-text"
                  >
                    custom.doamin.in
                  </span>
                </a>
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-blue500"
                  data-icon="copy"
                  style="cursor: pointer;"
                >
                  <svg
                    height="20"
                    viewBox="0 0 14 16"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="#22272D"
                      stroke="#22272D"
                      stroke-width="0.25"
                    >
                      <path
                        d="M12.89.55H6.388a3.28 3.28 0 00-3.043 2.067C1.672 2.76.34 4.17.34 5.87v9.271c0 .17.138.308.307.308H7.15c1.35 0 2.543-.825 3.042-2.066 1.673-.144 3.006-1.554 3.006-3.255V.86a.307.307 0 00-.308-.31zM7.15 14.835H.955V5.87c0-1.299.955-2.4 2.199-2.624-.002.01-.001.021-.003.032-.031.182-.05.367-.05.552v9.27c0 .17.138.308.308.308h6.105a2.67 2.67 0 01-2.364 1.425zm5.432-4.705a2.68 2.68 0 01-2.607 2.664H3.716V3.831a2.672 2.672 0 012.671-2.665h6.195v8.963z"
                      />
                      <path
                        d="M6.11 6.672a.308.308 0 000 .615h1.732V9.02a.308.308 0 00.616 0V7.287h1.733a.308.308 0 000-.615H8.458V4.939a.308.308 0 00-.616 0v1.733H6.11z"
                      />
                    </g>
                  </svg>
                </span>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main serviceDetailsItemContainer"
          >
            <p
              class="StyledProps--font StyledProps--main detailItemHeader"
            >
              ce.co.ruleDetailsHeader.computeType
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailItemValue"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="app-kubernetes"
              >
                <svg
                  height="21"
                  viewBox="0 0 32 30"
                  width="21"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                  >
                    <path
                      d="M15.94.023c-.228 0-.457 0-.685.229L4.512 5.28c-.457.229-.915.686-1.143 1.372L.626 18.08c-.229.457 0 1.143.229 1.6l.228.229 7.314 9.143c.458.457.915.685 1.6.685h11.886c.686 0 1.143-.228 1.6-.685l7.314-9.143c.458-.457.458-1.143.458-1.6L28.512 6.88c-.229-.685-.457-1.143-1.143-1.371L16.626.48c0-.228-.457-.457-.686-.457z"
                      fill="#326CE5"
                    />
                    <path
                      d="M15.94 3.909c-.457 0-.685.228-.685.686v2.057c0 .228-.229.228-.229.228v.229c-.457 0-.686 0-1.143.228-1.6.458-3.2 1.143-4.114 2.286l-.229-.228h-.457c-.228-.23-.457-.458-.914-.686l-.457-.457h-.229c-.228 0-.228-.229-.457-.229s-.457 0-.457.229c-.229.228-.229.685.228.914h.23c.228.229.456.229.456.229.457.228.686.457.914.685 0 0 .23.229.23.457l.228.229c-1.143 1.6-1.6 3.657-1.372 5.714h-.228l-.229.229c-.229 0-.686.228-1.143.228H4.97c-.457 0-.686.458-.457.686 0 .229.457.457.914.457h.229c.228 0 .457-.228.685-.228.457-.229.686-.229 1.143-.229.229 0 .229 0 .457.229h.229c.686 2.057 2.057 3.657 3.657 4.571l-.229.229v.457c-.228.228-.228.686-.685 1.143-.229.228-.229.228-.229.457v.228c-.228.458 0 .686.229.915.228.228.685 0 .914-.457v-.23c0-.228.229-.456.229-.685.228-.457.228-.914.457-1.143 0 0 .228 0 .228-.228l.229-.229c1.371.457 3.2.686 4.8.457.457 0 .686-.228 1.143-.228l.228.228s.229 0 .229.229c.228.229.228.686.457 1.143 0 .228 0 .457.229.686v.228c.228.457.457.457.914.457.228-.228.457-.457.228-.914v-.229c0-.228-.228-.228-.228-.457-.229-.457-.457-.685-.457-.914v-.686c1.828-1.143 2.971-2.743 3.657-4.571h.228s.23-.229.458-.229.685.229 1.142.229c.23 0 .458.228.686.228h.229c.457 0 .685-.228.914-.457 0-.228-.229-.685-.457-.685h-.914c-.458 0-.915 0-1.143-.23-.229 0-.229-.228-.229-.228h-.228c.228-.914 0-2.057-.229-2.971-.229-.914-.686-2.057-1.143-2.743l.229-.228c0-.23 0-.23.228-.458.229-.228.457-.457.915-.685.228 0 .457-.229.457-.229h.228c.229-.228.457-.686.229-.914-.229-.229-.686-.229-.914 0h-.229l-.457.457c-.229.229-.686.686-.914.686h-.458l-.228.228a8.778 8.778 0 00-5.257-2.514v-.229l-.229-.228V5.052c-.457-.686-.686-1.143-1.143-1.143zm-.685 5.028l-.229 3.429a.492.492 0 01-.457.457h-.229l-2.743-2.057c.915-.914 1.83-1.371 3.2-1.829h.458zm1.6 0c1.371.229 2.742.915 3.885 1.829l-2.743 1.829c-.228.228-.685.228-.685 0l-.229-.23-.228-3.428zm-6.4 3.2l2.514 2.286c.228.229.228.457 0 .686l-.229.228-3.2.915c-.228-1.6 0-2.972.915-4.115zm11.2 0c.457.686.685 1.372.914 2.058.228.685.228 1.37.228 2.057l-3.2-.915c-.228 0-.457-.457-.457-.685 0-.229 0-.229.229-.229l2.286-2.286zm-6.172 2.286h.914l.686.686-.228.914-.915.457-.914-.457-.229-.914.686-.686zm3.2 2.743c.229 0 .229 0 0 0l3.429.457c-.457 1.372-1.372 2.514-2.743 3.429l-1.372-3.2c.23-.229.23-.457.686-.686h0zm-5.486 0c.23 0 .458.229.458.457v.457l-1.372 3.2c-1.143-.685-2.057-1.828-2.743-3.428l3.657-.686zm2.743 1.371h.229l.228.229 1.6 2.971c-.228 0-.457.229-.685.229-1.143.229-2.515.229-3.657-.229l1.6-2.971c.457 0 .457-.229.685-.229h0z"
                      fill="#FFF"
                      stroke="#FFF"
                      stroke-width="0.25"
                    />
                  </g>
                </svg>
              </span>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey500"
                style="--text-line-clamp: 3;"
              >
                string
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main analyticsHeader"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
        >
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--font-weight-bold"
            level="2"
          >
            ce.co.autoStoppingRule.configuration.step4.advancedConfiguration
          </h2>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main analyticsHeader"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
        >
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main analyticsSubHeader StyledProps--font-weight-bold"
            level="2"
          >
            ce.co.autoStoppingRule.setupAccess.helpText.ssh.setup.download
          </h2>
          <div>
            <p
              class="StyledProps--font StyledProps--main text"
            >
              ce.co.sshSetup
              <span>
                <a
                  href=" https://docs.harness.io/article/7025n9ml7z-create-autostopping-rules-aws#setup_access_using_ssh_rdp"
                  target="_blank"
                >
                  Read More
                </a>
              </span>
            </p>
            <div
              class="Layout--horizontal StyledProps--main downloadCliContainer"
            >
              <div
                class="selectContainer"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="sshOs"
                        placeholder="- Select -"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main downloadBtn Button--with-current-color Button--iconOnly"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Download CLI
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-medium"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          >
            <div
              style="align-self: center;"
            >
              <div />
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-large"
            >
              <h2
                class="StyledProps--font StyledProps--font-h2 StyledProps--main"
                level="2"
              >
                $
                0
              </h2>
              <p
                class="StyledProps--font StyledProps--main"
              >
                ce.co.rulesTableHeaders.savings
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        style="align-self: center;"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          ce.co.ruleDrawer.lastWeekDataLabel
        </p>
      </div>
      <h3
        class="StyledProps--font StyledProps--font-h3 StyledProps--main"
        level="3"
      >
        CE.CO.RULEDRAWER.SPENDVSSAVINGS
      </h3>
      <p
        class="StyledProps--font StyledProps--main"
        style="align-self: center;"
      >
        ce.co.noData
      </p>
      <h3
        class="StyledProps--font StyledProps--font-h3 StyledProps--main"
        level="3"
      >
        CE.CO.RULEDRAWER.LOGS AND CE.CO.RULEDRAWER.USAGETIME
      </h3>
      <div
        class="bp3-tabs Tabs--main Tabs--horizontal"
      >
        <div
          class="bp3-tab-list"
          role="tablist"
        >
          <div
            class="bp3-tab-indicator-wrapper"
            style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
          >
            <div
              class="bp3-tab-indicator"
            />
          </div>
          <div
            aria-controls="bp3-tab-panel_logsAndUsage_name"
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="true"
            class="bp3-tab"
            data-tab-id="name"
            id="bp3-tab-title_logsAndUsage_name"
            role="tab"
            tabindex="0"
          >
            ce.co.ruleDrawer.usageTime
          </div>
          <div
            aria-controls="bp3-tab-panel_logsAndUsage_logs"
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="bp3-tab"
            data-tab-id="logs"
            id="bp3-tab-title_logsAndUsage_logs"
            role="tab"
            tabindex="0"
          >
            ce.co.ruleDrawer.logs
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="bp3-tab-title_logsAndUsage_name"
          class="bp3-tab-panel"
          id="bp3-tab-panel_logsAndUsage_name"
          role="tabpanel"
        >
          <div
            class="StyledProps--font StyledProps--main PageBody--pageBody pageContainer"
            data-name="page-body"
          >
            <p
              class="StyledProps--font StyledProps--main"
              style="align-self: center;"
            >
              ce.co.noData
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
